Update description: change product strategy to business strategy

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Behlül Yıldız | Blockchain Consultant</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta name="description" content="Advising crypto ventures on business strategy, operational scalability, and regulatory readiness.">
     <meta name="keywords" content="Blockchain, Crypto, Consultant, Behlül Yıldız, Behlul Yıldız, Behlul Yildiz, Advisor, Bitcoin, Cryptocurrency, DeFi, Web3">
     <meta name="author" content="Behlül Yıldız">
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Behlül Yıldız | Blockchain Consultant">
-    <meta property="og:description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta property="og:description" content="Advising crypto ventures on business strategy, operational scalability, and regulatory readiness.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://behlulyildiz.com">
     <meta property="og:site_name" content="Behlül Yıldız">
@@ -23,7 +23,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Behlül Yıldız | Blockchain Consultant">
-    <meta name="twitter:description" content="Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.">
+    <meta name="twitter:description" content="Advising crypto ventures on business strategy, operational scalability, and regulatory readiness.">
     <meta name="twitter:site" content="@bhllyldz">
     <meta name="twitter:creator" content="@bhllyldz">
     <meta name="twitter:image" content="https://behlulyildiz.com/favicon.svg">
@@ -38,7 +38,7 @@
         "@type": "Person",
         "name": "Behlül Yıldız",
         "jobTitle": "Blockchain Consultant",
-        "description": "Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.",
+        "description": "Advising crypto ventures on business strategy, operational scalability, and regulatory readiness.",
         "url": "https://behlulyildiz.com",
         "sameAs": [
             "https://www.linkedin.com/in/behlulyildiz/",
@@ -49,7 +49,7 @@
         "knowsAbout": [
             "Blockchain",
             "Cryptocurrency",
-            "Product Strategy",
+            "Business Strategy",
             "Operational Scalability",
             "Regulatory Compliance",
             "Executive Management",
@@ -882,7 +882,7 @@
                 <div class="hero-content fade-up">
                     <h1 class="hero-title">BLOCKCHAIN<br><span>CONSULTANT</span></h1>
                     <div class="hero-desc">
-                        Advising crypto ventures on product strategy, operational scalability, and regulatory readiness.
+                        Advising crypto ventures on business strategy, operational scalability, and regulatory readiness.
                     </div>
                     <div class="hero-stats">
                         <div class="stat">
