Update navbar links to uppercase: PROFILE, EXPERIENCE, PROJECTS / SKILLS, CONTACT

--- a/index.html
+++ b/index.html
@@ -867,10 +867,10 @@
         <nav>
             <ul class="nav-embedded">
                 <li><a href="#" class="logo-nav">BEHLUL YILDIZ</a></li>
-                <li><a href="#about">Profile</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects-skills">Projects / Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">PROFILE</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#projects-skills">PROJECTS / SKILLS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
